import AbstractNotification from "./AbstractNotification";

export default class CancelNotification extends AbstractNotification {

}
