enum ParticipantStatus {
  NOT_RESPONDED,
  ACCEPTED,
  REJECTED,
  ATTENDED,
}

export default ParticipantStatus;
